update to raml any type

--- a/v0/extras/gomp-conf.yml
+++ b/v0/extras/gomp-conf.yml
@@ -5,6 +5,8 @@ repo: github.com/Foxcapades/lib-go-raml
 maps:
   - key: string
     values:
+      - type: interface{}
+        name: AnyExampleMap
       - type: Annotation
         name: AnnotationMap
       - type: DataType
